[gd_scene load_steps=12 format=3 uid="uid://xby1btwfjrve"]

[ext_resource type="Script" uid="uid://ddas8siya183g" path="res://Scripts/player.gd" id="1_4flbx"]
[ext_resource type="Script" uid="uid://blcwgx6jxhxgb" path="res://Scripts/PlayerCamera/camera_state_machine.gd" id="2_2hs0m"]
[ext_resource type="Script" uid="uid://b2j2fntcaoqrv" path="res://Scripts/PlayerCamera/camera_spring_arm.gd" id="2_onrkg"]
[ext_resource type="Script" uid="uid://c37ixy76b7s86" path="res://Player/camera_rig.gd" id="2_vtle1"]
[ext_resource type="Script" uid="uid://dd3twak6f3odm" path="res://Scripts/PlayerCamera/third_person.gd" id="3_1jxqw"]
[ext_resource type="Script" uid="uid://cx6o23dv5vl6d" path="res://Scripts/PlayerCamera/camera_follow.gd" id="3_i3pqv"]
[ext_resource type="Script" uid="uid://b3t6xhlvm14yg" path="res://Scripts/PlayerCamera/first_person.gd" id="4_dw050"]
[ext_resource type="Script" uid="uid://chpd7s3100pth" path="res://Player/first_person_camera.gd" id="5_od3ui"]

[sub_resource type="SphereShape3D" id="SphereShape3D_i3pqv"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_sh265"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_4flbx"]
points = PackedVector3Array(-0.12520654, -0.532801, -0.4805069, 0.022783129, 0.4760704, 0.49888408, 0.16971254, 0.5591441, 0.46417162, 0.23105091, -0.8035912, 0.32045516, 0.40741014, 0.651043, -0.24352328, -0.4827893, 0.59484255, 0.082213186, -0.3628679, -0.68231165, 0.2896967, 0.46904355, -0.65452886, -0.06627126, -0.12744367, 0.8427015, -0.33810276, -0.39343542, -0.6839421, -0.24471663, 0.43825462, 0.62330925, 0.20084947, 0.0841477, 0.977454, 0.11479468, -0.06820232, -0.9764576, -0.12927033, 0.20054972, -0.56312895, -0.4514544, -0.18552664, 0.59545326, -0.4534751, -0.27336287, 0.59226835, 0.40775412, -0.0069364863, -0.47682306, 0.49966025, 0.37582088, -0.5886136, 0.31695515, 0.111579016, 0.5630594, -0.48117727, -0.41725034, 0.5278656, -0.27049688, -0.48454633, -0.59697217, -0.06650971, -0.27974695, 0.90856135, 0.05333608, -0.25019687, -0.8807117, 0.20531891, 0.263647, -0.90277094, -0.1273943, 0.29336792, 0.8715263, -0.15719566, 0.3734115, -0.5263189, -0.32824618, 0.4996626, 0.47664148, -0.0068885577, 0.053105574, 0.8750009, 0.32470253, -0.15454252, -0.5908538, 0.4658794, -0.09727988, -0.7823577, -0.39818847, -0.3876489, -0.49817133, 0.31564978, -0.30067965, -0.58799505, -0.38890144)

[node name="player" type="CharacterBody3D"]
collision_layer = 2
script = ExtResource("1_4flbx")

[node name="CameraRig" type="Node3D" parent="."]
script = ExtResource("2_vtle1")

[node name="ThirdPersonSpringArmPivot" type="Node3D" parent="CameraRig"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.42017412, 0)
script = ExtResource("2_onrkg")

[node name="SpringArm3D" type="SpringArm3D" parent="CameraRig/ThirdPersonSpringArmPivot"]
shape = SubResource("SphereShape3D_i3pqv")
spring_length = 6.0

[node name="SpringPosition" type="Node3D" parent="CameraRig/ThirdPersonSpringArmPivot/SpringArm3D"]

[node name="ThirdPersonCamera" type="Camera3D" parent="CameraRig/ThirdPersonSpringArmPivot" node_paths=PackedStringArray("camera_state", "spring_arm")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.45, 3)
script = ExtResource("3_i3pqv")
camera_state = NodePath("../../../CameraStateMachine")
spring_arm = NodePath("../SpringArm3D/SpringPosition")
lerp_power = 6.0

[node name="FirstPersonPivot" type="Node3D" parent="CameraRig"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.42, 0)

[node name="FirstPersonCamera" type="Camera3D" parent="CameraRig/FirstPersonPivot" node_paths=PackedStringArray("camera_state")]
script = ExtResource("5_od3ui")
camera_state = NodePath("../../../CameraStateMachine")

[node name="CameraStateMachine" type="Node" parent="."]
script = ExtResource("2_2hs0m")

[node name="ThirdPerson" type="Node" parent="CameraStateMachine"]
script = ExtResource("3_1jxqw")

[node name="FirstPerson" type="Node" parent="CameraStateMachine"]
script = ExtResource("4_dw050")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_sh265")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("ConvexPolygonShape3D_4flbx")
